Fix page overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,6 +76,7 @@ select {
 #root {
   height: 100vh;
   width: 100%;
+  overflow: auto;
 }
 
 .App {
